--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">duyetdev system</h1>
+      <h1 class="project-name">#duyetdev system</h1>
     </section>
 
     <section class="main-content">
       <center></center><h1>
 <a id="system-under-construction" class="anchor" href="#system-under-construction" aria-hidden="true"><span class="octicon octicon-link"></span></a>system is under construction</h1></center>
-
-
     </section>
 
   
