--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </section>
 
     <section class="main-content">
-      <center></center><h1>
+      <center><h1>
 <a id="system-under-construction" class="anchor" href="#system-under-construction" aria-hidden="true"><span class="octicon octicon-link"></span></a>system is under construction</h1></center>
     </section>
 
