--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <meta http-quiv="refresh" content="0; url=https://offline.duyetdev.com/" />
+    <script>window.location = 'https://offline.duyetdev.com/';</script>
     <meta charset="UTF-8">
     <title>System under construction</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
